# eduhub

./: .env  .gitignore  alembic.ini  dockerfile  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  vite.config.js
app/: main.py
app/core/: config.py
app/db/: database.py  init_db.py
app/db/migrations/: env.py
app/models/: __init__.py  chat.py  comment.py  enrollment.py  material.py  post.py  subject.py  user.py
app/routers/: admin.py  auth.py  chat.py  enrollments.py  materials.py  posts.py  subjects.py
app/schemas/: admin.py  auth.py  chat.py  comment.py  enrollment.py  material.py  post.py  subject.py
app/services/: admin_service.py  auth_service.py  chat_service.py  enrollment_service.py  material_service.py  post_service.py  storage_service.py  subject_service.py
frontend/: .gitignore  package-lock.json  vite.config.js
frontend/src/: main.js
frontend/src/assets/: global.css
frontend/src/pages/: AdminUsersPage.vue  CommentsPage.vue  LoginPage.vue  RegisterPage.vue  SettingsPage.vue  SubjectPage.vue  SubjectsPage.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  dateFormatter.js
frontend/src/stores/: postsStore.js  subjectsStore.js  usersStore.js
src/: App.vue  main.js
src/components/UI/: BaseInput.vue
src/components/layout/: TabBar.vue  TopBar.vue
src/pages/: LoginPage.vue  RegisterPage.vue  SubjectPage.vue  SubjectsPage.vue
src/router/: index.js
src/services/: api.js
src/stores/: authStore.js  chatStore.js  postsStore.js  subjectsStore.js
tests/: test_api.py
(+15 files in other folders)
